MED-50: replaced clientId to clientFirstName. Edit search through snapshots. Edit tests