@@ -7,8 +7,9 @@ import com.ifortex.internship.emergencyservice.dto.response.SymptomDto;
 import com.ifortex.internship.emergencyservice.model.constant.EmergencyStatus;
 import com.ifortex.internship.emergencyservice.model.emergency.Emergency;
 import com.ifortex.internship.emergencyservice.model.emergency.ParamedicEmergencyLocation;
-import com.ifortex.internship.emergencyservice.model.snapshot.ParamedicEmergencyLocationSnapshot;
 import com.ifortex.internship.emergencyservice.model.snapshot.EmergencySnapshot;
+import com.ifortex.internship.emergencyservice.model.snapshot.ParamedicEmergencyLocationSnapshot;
+import com.ifortex.internship.emergencyservice.repository.EmergencyRepository;
 import com.ifortex.internship.emergencyservice.repository.EmergencySnapshotRepository;
 import com.ifortex.internship.emergencyservice.repository.UserAllergyRepository;
 import com.ifortex.internship.emergencyservice.repository.UserDiseaseRepository;
@@ -19,15 +20,16 @@ import com.ifortex.internship.emergencyservice.util.EmergencySnapshotMapper;
 import com.ifortex.internship.emergencyservice.util.UserAllergyMapper;
 import com.ifortex.internship.emergencyservice.util.UserDiseaseMapper;
 import com.ifortex.internship.medstarter.exception.custom.EntityNotFoundException;
+import com.ifortex.internship.medstarter.security.service.AuthenticationFacade;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -35,12 +37,10 @@ import java.util.Optional;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
@@ -49,89 +49,76 @@ import static org.mockito.Mockito.when;
 @ExtendWith(MockitoExtension.class)
 class EmergencySnapshotServiceTest {
 
-    @Mock private SymptomService symptomService;
-    @Mock private UserAllergyMapper userAllergyMapper;
-    @Mock private UserDiseaseMapper userDiseaseMapper;
-    @Mock private UserAllergyRepository userAllergyRepository;
-    @Mock private UserDiseaseRepository userDiseaseRepository;
-    @Mock private EmergencyLocationMapper emergencyLocationMapper;
-    @Mock private EmergencySnapshotMapper emergencySnapshotMapper;
-    @Mock private EmergencySnapshotRepository emergencySnapshotRepository;
-    @InjectMocks private EmergencySnapshotService emergencySnapshotService;
+    @Mock SymptomService symptomService;
+    @Mock UserAllergyMapper userAllergyMapper;
+    @Mock UserDiseaseMapper userDiseaseMapper;
+    @Mock UserAllergyRepository userAllergyRepository;
+    @Mock UserDiseaseRepository userDiseaseRepository;
+    @Mock EmergencyLocationMapper emergencyLocationMapper;
+    @Mock EmergencySnapshotMapper emergencySnapshotMapper;
+    @Mock EmergencySnapshotRepository emergencySnapshotRepository;
+    @Mock EmergencyRepository emergencyRepository;
+    @Mock AuthenticationFacade authenticationFacade;
 
-    private Emergency emergency;
-    private EmergencySnapshot snapshot;
-    private ParamedicEmergencyLocation location;
-    private UUID clientId;
+    @InjectMocks EmergencySnapshotService emergencySnapshotService;
+
+    Emergency emergency;
+    EmergencySnapshot snapshot;
+    ParamedicEmergencyLocation location;
+    UUID clientId;
 
     @BeforeEach
     void setUp() {
         clientId = UUID.randomUUID();
-        emergency = new Emergency().setClientId(clientId).setStatus(EmergencyStatus.ONGOING);
+        emergency = new Emergency()
+            .setClientId(clientId)
+            .setStatus(EmergencyStatus.ONGOING)
+            .setLatitude(new BigDecimal("60"))
+            .setLongitude(new BigDecimal("30"));
         emergency.setId(UUID.randomUUID());
-        emergency.setCreatedAt(java.time.Instant.now());
+        emergency.setCreatedAt(Instant.now());
+
         snapshot = new EmergencySnapshot();
         snapshot.setId(emergency.getId().toString());
         snapshot.setCreatedAt(emergency.getCreatedAt());
         snapshot.setStatus(emergency.getStatus());
-        snapshot.setClientId(clientId);
-        snapshot.setLongitude(new BigDecimal("60"));
-        snapshot.setLatitude(new BigDecimal("30"));
+        snapshot.setClientFirstName("Aboba");
+        snapshot.setLatitude(emergency.getLatitude());
+        snapshot.setLongitude(emergency.getLongitude());
     }
 
     @Test
     void createSnapshot_success() {
+        when(authenticationFacade.getUserFirstNameFromAuthentication()).thenReturn("Aboba");
         when(userAllergyRepository.findByUserId(clientId)).thenReturn(Collections.emptyList());
         when(userAllergyMapper.toDtoList(any())).thenReturn(Collections.emptyList());
         when(userDiseaseRepository.findByUserId(clientId)).thenReturn(Collections.emptyList());
         when(userDiseaseMapper.toDtoList(any())).thenReturn(Collections.emptyList());
-        when(symptomService.collectParentsSymptomsForEmergency(emergency.getId().toString(), List.of()))
-            .thenReturn(Collections.emptyList());
-        ParamedicEmergencyLocationSnapshot locSnapshot = new ParamedicEmergencyLocationSnapshot();
-        when(emergencyLocationMapper.toSnapshot(location)).thenReturn(locSnapshot);
-        when(emergencySnapshotRepository.save(any(EmergencySnapshot.class))).thenReturn(snapshot);
+        when(symptomService.collectParentsSymptomsForEmergency(any(), any())).thenReturn(Collections.emptyList());
+        when(emergencyLocationMapper.toSnapshot(any())).thenReturn(new ParamedicEmergencyLocationSnapshot());
+        when(emergencySnapshotRepository.save(any())).thenReturn(snapshot);
 
         emergencySnapshotService.createSnapshot(emergency, location, List.of());
 
-        ArgumentCaptor<EmergencySnapshot> captor = ArgumentCaptor.forClass(EmergencySnapshot.class);
-        verify(emergencySnapshotRepository).save(captor.capture());
-        EmergencySnapshot savedSnapshot = captor.getValue();
-        assertEquals(emergency.getId().toString(), savedSnapshot.getId());
-        assertEquals(emergency.getCreatedAt(), savedSnapshot.getCreatedAt());
-        assertEquals(emergency.getStatus(), savedSnapshot.getStatus());
-        assertEquals(clientId, savedSnapshot.getClientId());
-        assertNotNull(savedSnapshot.getParamedicLocations());
-        assertEquals(1, savedSnapshot.getParamedicLocations().size());
-        assertEquals(locSnapshot, savedSnapshot.getParamedicLocations().getFirst());
+        verify(emergencySnapshotRepository).save(any(EmergencySnapshot.class));
     }
 
     @Test
     void addSymptomsForCurrentEmergency_success() {
-        UUID newSymptomId = UUID.randomUUID();
+        UUID symptomId = UUID.randomUUID();
         UpdateEmergencySymptomsRequest request = mock(UpdateEmergencySymptomsRequest.class);
-        when(request.symptoms()).thenReturn(List.of(newSymptomId));
+        when(request.symptoms()).thenReturn(List.of(symptomId));
         snapshot.setSymptoms(new ArrayList<>());
-        when(emergencySnapshotRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING))
-            .thenReturn(Optional.of(snapshot));
-        SymptomDto newSymptom = new SymptomDto(newSymptomId, "Cough", null, "Rest", "anim", null);
-        when(symptomService.collectParentsSymptomsForEmergency(snapshot.getId(), request.symptoms()))
-            .thenReturn(List.of(newSymptom));
+
+        when(emergencyRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING)).thenReturn(Optional.of(emergency));
+        when(emergencySnapshotRepository.findById(emergency.getId().toString())).thenReturn(Optional.of(snapshot));
+        when(symptomService.collectParentsSymptomsForEmergency(any(), any()))
+            .thenReturn(List.of(new SymptomDto(symptomId, "Cough", null, "", "", null)));
 
         emergencySnapshotService.addSymptomsForCurrentEmergency(request, clientId);
 
-        ArgumentCaptor<EmergencySnapshot> captor = ArgumentCaptor.forClass(EmergencySnapshot.class);
-        verify(emergencySnapshotRepository).save(captor.capture());
-        EmergencySnapshot savedSnapshot = captor.getValue();
-        assertTrue(savedSnapshot.getSymptoms().stream().anyMatch(s -> s.id().equals(newSymptomId)));
-    }
-
-    @Test
-    void addSymptomsForCurrentEmergency_noSnapshot_shouldThrowException() {
-        UpdateEmergencySymptomsRequest request = mock(UpdateEmergencySymptomsRequest.class);
-        lenient().when(request.symptoms()).thenReturn(List.of(UUID.randomUUID()));
-        when(emergencySnapshotRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING))
-            .thenReturn(Optional.empty());
-        assertThrows(EntityNotFoundException.class, () -> emergencySnapshotService.addSymptomsForCurrentEmergency(request, clientId));
+        assertEquals(1, snapshot.getSymptoms().size());
+        verify(emergencySnapshotRepository).save(snapshot);
     }
 
     @Test
@@ -139,21 +126,19 @@ class EmergencySnapshotServiceTest {
         UUID symptomId = UUID.randomUUID();
         UpdateEmergencySymptomsRequest request = mock(UpdateEmergencySymptomsRequest.class);
         when(request.symptoms()).thenReturn(List.of(symptomId));
-        List<SymptomDto> currentSymptoms = new ArrayList<>();
-        SymptomDto symptomToRemove = new SymptomDto(symptomId, "Headache", null, "Rest", "anim", null);
-        currentSymptoms.add(symptomToRemove);
-        snapshot.setSymptoms(currentSymptoms);
-        when(emergencySnapshotRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING))
-            .thenReturn(Optional.of(snapshot));
+
+        SymptomDto symptom = new SymptomDto(symptomId, "Headache", null, "", "", null);
+        snapshot.setSymptoms(new ArrayList<>(List.of(symptom)));
+
+        when(emergencyRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING)).thenReturn(Optional.of(emergency));
+        when(emergencySnapshotRepository.findById(emergency.getId().toString())).thenReturn(Optional.of(snapshot));
         when(symptomService.collectChildSymptomsForEmergency(snapshot.getId(), request.symptoms()))
-            .thenReturn(List.of(symptomToRemove));
+            .thenReturn(List.of(symptom));
 
         emergencySnapshotService.deleteSymptomsForCurrentEmergency(request, clientId);
 
-        ArgumentCaptor<EmergencySnapshot> captor = ArgumentCaptor.forClass(EmergencySnapshot.class);
-        verify(emergencySnapshotRepository).save(captor.capture());
-        EmergencySnapshot savedSnapshot = captor.getValue();
-        assertFalse(savedSnapshot.getSymptoms().stream().anyMatch(s -> s.id().equals(symptomId)));
+        assertTrue(snapshot.getSymptoms().isEmpty());
+        verify(emergencySnapshotRepository).save(snapshot);
     }
 
     @Test
@@ -161,80 +146,72 @@ class EmergencySnapshotServiceTest {
         UpdateEmergencySymptomsRequest request = mock(UpdateEmergencySymptomsRequest.class);
         when(request.symptoms()).thenReturn(List.of(UUID.randomUUID()));
         snapshot.setSymptoms(Collections.emptyList());
-        when(emergencySnapshotRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING))
-            .thenReturn(Optional.of(snapshot));
+
+        when(emergencyRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING)).thenReturn(Optional.of(emergency));
+        when(emergencySnapshotRepository.findById(emergency.getId().toString())).thenReturn(Optional.of(snapshot));
 
         emergencySnapshotService.deleteSymptomsForCurrentEmergency(request, clientId);
 
-        verify(emergencySnapshotRepository, never()).save(any(EmergencySnapshot.class));
+        verify(emergencySnapshotRepository, never()).save(any());
     }
 
     @Test
     void getSymptomsForCurrentEmergency_success() {
-        List<SymptomDto> symptomList = List.of(
-            new SymptomDto(UUID.randomUUID(), "Fever", null, "Drink water", "anim_fever", null)
-        );
-        snapshot.setSymptoms(symptomList);
-        when(emergencySnapshotRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING))
-            .thenReturn(Optional.of(snapshot));
-        List<EmergencySymptomListDto> expectedTree = List.of(
-            new EmergencySymptomListDto(UUID.randomUUID(), "Fever", null, "Drink water", "anim_fever", null, Collections.emptyList())
-        );
-        when(emergencySnapshotMapper.buildSymptomTree(symptomList)).thenReturn(expectedTree);
+        List<SymptomDto> symptoms = List.of(new SymptomDto(UUID.randomUUID(), "Fever", null, "", "", null));
+        snapshot.setSymptoms(symptoms);
+
+        when(emergencyRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING)).thenReturn(Optional.of(emergency));
+        when(emergencySnapshotRepository.findById(emergency.getId().toString())).thenReturn(Optional.of(snapshot));
+        when(emergencySnapshotMapper.buildSymptomTree(symptoms)).thenReturn(List.of());
 
         List<EmergencySymptomListDto> result = emergencySnapshotService.getSymptomsForCurrentEmergency(clientId);
-        assertEquals(expectedTree, result);
+        assertNotNull(result);
     }
 
     @Test
-    void getSymptomsForCurrentEmergency_emptySymptoms_shouldReturnEmptyList() {
-        snapshot.setSymptoms(Collections.emptyList());
-        when(emergencySnapshotRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING))
-            .thenReturn(Optional.of(snapshot));
-        List<?> result = emergencySnapshotService.getSymptomsForCurrentEmergency(clientId);
-        assertTrue(result.isEmpty());
-    }
-
-    @Test
-    void getSymptomsForCurrentEmergency_noSnapshot_shouldThrowException() {
-        when(emergencySnapshotRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING))
-            .thenReturn(Optional.empty());
+    void getSymptomsForCurrentEmergency_noSnapshot_shouldThrow() {
+        when(emergencyRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING)).thenReturn(Optional.empty());
         assertThrows(EntityNotFoundException.class, () -> emergencySnapshotService.getSymptomsForCurrentEmergency(clientId));
     }
 
     @Test
-    void getEmergencySnapshot_success() {
-        when(emergencySnapshotRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING))
-            .thenReturn(Optional.of(snapshot));
-        EmergencySnapshot result = emergencySnapshotService.getEmergencySnapshot(clientId);
+    void getEmergencySnapshotByClientIdAndStatus_success() {
+        when(emergencyRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING)).thenReturn(Optional.of(emergency));
+        when(emergencySnapshotRepository.findById(emergency.getId().toString())).thenReturn(Optional.of(snapshot));
+
+        EmergencySnapshot result = emergencySnapshotService.getEmergencySnapshotByClientIdAndStatus(clientId, EmergencyStatus.ONGOING);
         assertEquals(snapshot, result);
     }
 
     @Test
-    void getEmergencySnapshot_notFound_shouldThrowException() {
-        when(emergencySnapshotRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING))
-            .thenReturn(Optional.empty());
-        assertThrows(EntityNotFoundException.class, () -> emergencySnapshotService.getEmergencySnapshot(clientId));
+    void getEmergencySnapshotByClientIdAndStatus_notFound_shouldThrow() {
+        when(emergencyRepository.findByClientIdAndStatus(clientId, EmergencyStatus.ONGOING)).thenReturn(Optional.of(emergency));
+        when(emergencySnapshotRepository.findById(emergency.getId().toString())).thenReturn(Optional.empty());
+
+        assertThrows(EntityNotFoundException.class, () ->
+            emergencySnapshotService.getEmergencySnapshotByClientIdAndStatus(clientId, EmergencyStatus.ONGOING));
     }
 
     @Test
     void getAssignedEmergency_success() {
         UUID paramedicId = UUID.randomUUID();
-        when(emergencySnapshotRepository.findByParamedicIdAndStatus(paramedicId, EmergencyStatus.ONGOING))
-            .thenReturn(Optional.of(snapshot));
-        ParamedicEmergencyViewDto expectedDto = new ParamedicEmergencyViewDto();
-        when(emergencySnapshotMapper.toParamedicViewDto(snapshot)).thenReturn(expectedDto);
+
+        when(emergencyRepository.findByParamedicIdAndStatus(paramedicId, EmergencyStatus.ONGOING)).thenReturn(Optional.of(emergency));
+        when(emergencySnapshotRepository.findById(emergency.getId().toString())).thenReturn(Optional.of(snapshot));
+        when(emergencySnapshotMapper.toParamedicViewDto(snapshot)).thenReturn(new ParamedicEmergencyViewDto());
+
         Optional<ParamedicEmergencyViewDto> result = emergencySnapshotService.getAssignedEmergency(paramedicId);
+
         assertTrue(result.isPresent());
-        assertEquals(expectedDto, result.get());
     }
 
     @Test
-    void getAssignedEmergency_notFound_shouldReturnEmptyOptional() {
+    void getAssignedEmergency_notFound_shouldThrow() {
         UUID paramedicId = UUID.randomUUID();
-        when(emergencySnapshotRepository.findByParamedicIdAndStatus(paramedicId, EmergencyStatus.ONGOING))
-            .thenReturn(Optional.empty());
-        Optional<ParamedicEmergencyViewDto> result = emergencySnapshotService.getAssignedEmergency(paramedicId);
-        assertTrue(result.isEmpty());
+
+        when(emergencyRepository.findByParamedicIdAndStatus(paramedicId, EmergencyStatus.ONGOING)).thenReturn(Optional.empty());
+
+        assertThrows(EntityNotFoundException.class, () ->
+            emergencySnapshotService.getAssignedEmergency(paramedicId));
     }
 }
